python-compiler/tests/snapshots/numpy__array_creation_and_indexing.snap
---
source: tests/numpy.rs
expression: compile(source)
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_list = tail call dereferenceable_or_null(40) ptr @malloc(i64 40)
  store i64 4, ptr %malloc_list, align 4
  %elem_ptr_0 = getelementptr inbounds i64, ptr %malloc_list, i64 1
  store i64 4607182418800017408, ptr %elem_ptr_0, align 4
  %elem_ptr_1 = getelementptr inbounds i64, ptr %malloc_list, i64 2
  store i64 4611686018427387904, ptr %elem_ptr_1, align 4
  %elem_ptr_2 = getelementptr inbounds i64, ptr %malloc_list, i64 3
  store i64 4613937818241073152, ptr %elem_ptr_2, align 4
  %elem_ptr_3 = getelementptr inbounds i64, ptr %malloc_list, i64 4
  store i64 4616189618054758400, ptr %elem_ptr_3, align 4
  %ptr_to_int = ptrtoint ptr %malloc_list to i64
  %list_ptr_payload = and i64 %ptr_to_int, 281474976710655
  %payload_to_list_ptr = inttoptr i64 %list_ptr_payload to ptr
  %list_len = load i64, ptr %payload_to_list_ptr, align 4
  %arr_words = shl i64 %list_len, 3
  %arr_bytes = add i64 %arr_words, 24
  %malloc_arr = tail call ptr @malloc(i64 %arr_bytes)
  %malloc_arr90 = ptrtoint ptr %malloc_arr to i64
  store i64 0, ptr %malloc_arr, align 4
  %hdr_ptr2 = getelementptr inbounds i64, ptr %malloc_arr, i64 1
  store i64 1, ptr %hdr_ptr2, align 4
  %hdr_ptr3 = getelementptr inbounds i64, ptr %malloc_arr, i64 2
  store i64 %list_len, ptr %hdr_ptr3, align 4
  %data_ptr = getelementptr inbounds i64, ptr %malloc_arr, i64 3
  %loop_cont88.not = icmp eq i64 %list_len, 0
  br i1 %loop_cont88.not, label %arr_loop_end, label %arr_loop_body.preheader

arr_loop_body.preheader:                          ; preds = %entry
  %min.iters.check = icmp ult i64 %list_len, 6
  br i1 %min.iters.check, label %arr_loop_body.preheader91, label %vector.memcheck

vector.memcheck:                                  ; preds = %arr_loop_body.preheader
  %0 = add i64 %malloc_arr90, 16
  %1 = sub i64 %0, %list_ptr_payload
  %diff.check = icmp ult i64 %1, 16
  br i1 %diff.check, label %arr_loop_body.preheader91, label %vector.ph

vector.ph:                                        ; preds = %vector.memcheck
  %n.vec = and i64 %list_len, -2
  br label %vector.body

vector.body:                                      ; preds = %vector.body, %vector.ph
  %index = phi i64 [ 0, %vector.ph ], [ %index.next, %vector.body ]
  %2 = or disjoint i64 %index, 1
  %3 = getelementptr inbounds i64, ptr %payload_to_list_ptr, i64 %2
  %wide.load = load <2 x i64>, ptr %3, align 4
  %4 = and <2 x i64> %wide.load, <i64 9221120237041090560, i64 9221120237041090560>
  %5 = icmp eq <2 x i64> %4, <i64 9221120237041090560, i64 9221120237041090560>
  %6 = bitcast <2 x i64> %wide.load to <2 x double>
  %7 = and <2 x i64> %wide.load, <i64 281474976710655, i64 281474976710655>
  %8 = icmp ult <2 x i64> %7, <i64 140737488355328, i64 140737488355328>
  %9 = select <2 x i1> %8, <2 x i64> zeroinitializer, <2 x i64> <i64 -281474976710656, i64 -281474976710656>
  %10 = or disjoint <2 x i64> %9, %7
  %11 = sitofp <2 x i64> %10 to <2 x double>
  %12 = select <2 x i1> %5, <2 x double> %11, <2 x double> %6
  %13 = getelementptr inbounds double, ptr %data_ptr, i64 %index
  store <2 x double> %12, ptr %13, align 8
  %index.next = add nuw i64 %index, 2
  %14 = icmp eq i64 %index.next, %n.vec
  br i1 %14, label %middle.block, label %vector.body, !llvm.loop !0

middle.block:                                     ; preds = %vector.body
  %cmp.n = icmp eq i64 %list_len, %n.vec
  br i1 %cmp.n, label %arr_loop_end, label %arr_loop_body.preheader91

arr_loop_body.preheader91:                        ; preds = %vector.memcheck, %arr_loop_body.preheader, %middle.block
  %i.089.ph = phi i64 [ 0, %vector.memcheck ], [ 0, %arr_loop_body.preheader ], [ %n.vec, %middle.block ]
  br label %arr_loop_body

arr_loop_body:                                    ; preds = %arr_loop_body.preheader91, %arr_loop_body
  %i.089 = phi i64 [ %list_idx, %arr_loop_body ], [ %i.089.ph, %arr_loop_body.preheader91 ]
  %list_idx = add nuw i64 %i.089, 1
  %list_elem_ptr = getelementptr inbounds i64, ptr %payload_to_list_ptr, i64 %list_idx
  %boxed_elem = load i64, ptr %list_elem_ptr, align 4
  %check_qnan = and i64 %boxed_elem, 9221120237041090560
  %is_float.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %boxed_elem to double
  %extract_payload = and i64 %boxed_elem, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel87 = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel87, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not, double %payload_to_f64, double %i64_to_f64
  %elem_ptr = getelementptr inbounds double, ptr %data_ptr, i64 %i.089
  store double %final_payload, ptr %elem_ptr, align 8
  %loop_cont = icmp ult i64 %list_idx, %list_len
  br i1 %loop_cont, label %arr_loop_body, label %arr_loop_end, !llvm.loop !3

arr_loop_end:                                     ; preds = %arr_loop_body, %middle.block, %entry
  %arr_ptr_to_int = ptrtoint ptr %malloc_arr to i64
  %arr_ptr_payload = and i64 %arr_ptr_to_int, 281474976710655
  %payload_to_arr_ptr = inttoptr i64 %arr_ptr_payload to ptr
  %data_ptr6 = getelementptr inbounds i64, ptr %payload_to_arr_ptr, i64 3
  %elem82 = load i64, ptr %data_ptr6, align 8
  %check_qnan14 = and i64 %elem82, 9221120237041090560
  %is_float15.not = icmp eq i64 %check_qnan14, 9221120237041090560
  %tag_bits = lshr i64 %elem82, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %15 = trunc i64 %tag_bits to i3
  %16 = select i1 %is_bool, i3 2, i3 %15
  %17 = select i1 %is_string, i3 3, i3 %16
  %18 = select i1 %is_list, i3 -4, i3 %17
  %i64_to_f6418 = bitcast i64 %elem82 to double
  %extract_payload19 = and i64 %elem82, 281474976710655
  %is_negative21.not = icmp ult i64 %extract_payload19, 140737488355328
  %masksel = select i1 %is_negative21.not, i64 0, i64 -281474976710656
  %signed_payload23 = or disjoint i64 %masksel, %extract_payload19
  %payload_to_f6424 = sitofp i64 %signed_payload23 to double
  %final_payload25 = select i1 %is_float15.not, double %payload_to_f6424, double %i64_to_f6418
  %trunc = select i1 %is_float15.not, i3 %18, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

print_int:                                        ; preds = %arr_loop_end
  %to_int = fptosi double %final_payload25 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.1, i64 %to_int)
  br label %index_merge32

print_float:                                      ; preds = %arr_loop_end
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.2, double %final_payload25)
  br label %index_merge32

print_string:                                     ; preds = %arr_loop_end
  %payload_to_ptr = inttoptr i64 %extract_payload19 to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %index_merge32

index_merge32:                                    ; preds = %print_string, %print_float, %print_int
  %elem_ptr36 = getelementptr inbounds i64, ptr %payload_to_arr_ptr, i64 6
  %elem3783 = load i64, ptr %elem_ptr36, align 8
  %check_qnan46 = and i64 %elem3783, 9221120237041090560
  %is_float47.not = icmp eq i64 %check_qnan46, 9221120237041090560
  %tag_bits48 = lshr i64 %elem3783, 48
  %tag49 = and i64 %tag_bits48, 7
  %is_bool50 = icmp eq i64 %tag49, 1
  %is_string51 = icmp eq i64 %tag49, 2
  %is_list52 = icmp eq i64 %tag49, 3
  %19 = trunc i64 %tag_bits48 to i3
  %20 = select i1 %is_bool50, i3 2, i3 %19
  %21 = select i1 %is_string51, i3 3, i3 %20
  %22 = select i1 %is_list52, i3 -4, i3 %21
  %i64_to_f6459 = bitcast i64 %elem3783 to double
  %extract_payload60 = and i64 %elem3783, 281474976710655
  %is_negative62.not = icmp ult i64 %extract_payload60, 140737488355328
  %masksel84 = select i1 %is_negative62.not, i64 0, i64 -281474976710656
  %signed_payload64 = or disjoint i64 %masksel84, %extract_payload60
  %payload_to_f6465 = sitofp i64 %signed_payload64 to double
  %final_payload66 = select i1 %is_float47.not, double %payload_to_f6465, double %i64_to_f6459
  %trunc85 = select i1 %is_float47.not, i3 %22, i3 1
  switch i3 %trunc85, label %print_float71 [
    i3 3, label %print_string72
    i3 0, label %print_int70
  ]

print_int70:                                      ; preds = %index_merge32
  %to_int74 = fptosi double %final_payload66 to i64
  %printf_int75 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.1, i64 %to_int74)
  br label %print_end73

print_float71:                                    ; preds = %index_merge32
  %printf_float76 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.2, double %final_payload66)
  br label %print_end73

print_string72:                                   ; preds = %index_merge32
  %payload_to_ptr78 = inttoptr i64 %extract_payload60 to ptr
  %puts86 = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr78)
  br label %print_end73

print_end73:                                      ; preds = %print_string72, %print_float71, %print_int70
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }

!0 = distinct !{!0, !1, !2}
!1 = !{!"llvm.loop.isvectorized", i32 1}
!2 = !{!"llvm.loop.unroll.runtime.disable"}
!3 = distinct !{!3, !1}
