python-compiler/tests/snapshots/numpy__array_elementwise_add.snap
---
source: tests/numpy.rs
expression: compile(source)
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_list = tail call dereferenceable_or_null(40) ptr @malloc(i64 40)
  store i64 4, ptr %malloc_list, align 4
  %elem_ptr_0 = getelementptr inbounds i64, ptr %malloc_list, i64 1
  store i64 4607182418800017408, ptr %elem_ptr_0, align 4
  %elem_ptr_1 = getelementptr inbounds i64, ptr %malloc_list, i64 2
  store i64 4611686018427387904, ptr %elem_ptr_1, align 4
  %elem_ptr_2 = getelementptr inbounds i64, ptr %malloc_list, i64 3
  store i64 4613937818241073152, ptr %elem_ptr_2, align 4
  %elem_ptr_3 = getelementptr inbounds i64, ptr %malloc_list, i64 4
  store i64 4616189618054758400, ptr %elem_ptr_3, align 4
  %ptr_to_int = ptrtoint ptr %malloc_list to i64
  %list_ptr_payload = and i64 %ptr_to_int, 281474976710655
  %payload_to_list_ptr = inttoptr i64 %list_ptr_payload to ptr
  %list_len = load i64, ptr %payload_to_list_ptr, align 4
  %arr_words = shl i64 %list_len, 3
  %arr_bytes = add i64 %arr_words, 24
  %malloc_arr = tail call ptr @malloc(i64 %arr_bytes)
  %malloc_arr135 = ptrtoint ptr %malloc_arr to i64
  store i64 0, ptr %malloc_arr, align 4
  %hdr_ptr2 = getelementptr inbounds i64, ptr %malloc_arr, i64 1
  store i64 1, ptr %hdr_ptr2, align 4
  %hdr_ptr3 = getelementptr inbounds i64, ptr %malloc_arr, i64 2
  store i64 %list_len, ptr %hdr_ptr3, align 4
  %data_ptr = getelementptr inbounds i64, ptr %malloc_arr, i64 3
  %loop_cont129.not = icmp eq i64 %list_len, 0
  br i1 %loop_cont129.not, label %arr_loop_end, label %arr_loop_body.preheader

arr_loop_body.preheader:                          ; preds = %entry
  %min.iters.check = icmp ult i64 %list_len, 6
  br i1 %min.iters.check, label %arr_loop_body.preheader172, label %vector.memcheck

vector.memcheck:                                  ; preds = %arr_loop_body.preheader
  %0 = add i64 %malloc_arr135, 16
  %1 = sub i64 %0, %list_ptr_payload
  %diff.check = icmp ult i64 %1, 16
  br i1 %diff.check, label %arr_loop_body.preheader172, label %vector.ph

vector.ph:                                        ; preds = %vector.memcheck
  %n.vec = and i64 %list_len, -2
  br label %vector.body

vector.body:                                      ; preds = %vector.body, %vector.ph
  %index = phi i64 [ 0, %vector.ph ], [ %index.next, %vector.body ]
  %2 = or disjoint i64 %index, 1
  %3 = getelementptr inbounds i64, ptr %payload_to_list_ptr, i64 %2
  %wide.load = load <2 x i64>, ptr %3, align 4
  %4 = and <2 x i64> %wide.load, <i64 9221120237041090560, i64 9221120237041090560>
  %5 = icmp eq <2 x i64> %4, <i64 9221120237041090560, i64 9221120237041090560>
  %6 = bitcast <2 x i64> %wide.load to <2 x double>
  %7 = and <2 x i64> %wide.load, <i64 281474976710655, i64 281474976710655>
  %8 = icmp ult <2 x i64> %7, <i64 140737488355328, i64 140737488355328>
  %9 = select <2 x i1> %8, <2 x i64> zeroinitializer, <2 x i64> <i64 -281474976710656, i64 -281474976710656>
  %10 = or disjoint <2 x i64> %9, %7
  %11 = sitofp <2 x i64> %10 to <2 x double>
  %12 = select <2 x i1> %5, <2 x double> %11, <2 x double> %6
  %13 = getelementptr inbounds double, ptr %data_ptr, i64 %index
  store <2 x double> %12, ptr %13, align 8
  %index.next = add nuw i64 %index, 2
  %14 = icmp eq i64 %index.next, %n.vec
  br i1 %14, label %middle.block, label %vector.body, !llvm.loop !0

middle.block:                                     ; preds = %vector.body
  %cmp.n = icmp eq i64 %list_len, %n.vec
  br i1 %cmp.n, label %arr_loop_end, label %arr_loop_body.preheader172

arr_loop_body.preheader172:                       ; preds = %vector.memcheck, %arr_loop_body.preheader, %middle.block
  %i.0130.ph = phi i64 [ 0, %vector.memcheck ], [ 0, %arr_loop_body.preheader ], [ %n.vec, %middle.block ]
  br label %arr_loop_body

arr_loop_body:                                    ; preds = %arr_loop_body.preheader172, %arr_loop_body
  %i.0130 = phi i64 [ %list_idx, %arr_loop_body ], [ %i.0130.ph, %arr_loop_body.preheader172 ]
  %list_idx = add nuw i64 %i.0130, 1
  %list_elem_ptr = getelementptr inbounds i64, ptr %payload_to_list_ptr, i64 %list_idx
  %boxed_elem = load i64, ptr %list_elem_ptr, align 4
  %check_qnan = and i64 %boxed_elem, 9221120237041090560
  %is_float.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %boxed_elem to double
  %extract_payload = and i64 %boxed_elem, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel128 = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel128, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not, double %payload_to_f64, double %i64_to_f64
  %elem_ptr = getelementptr inbounds double, ptr %data_ptr, i64 %i.0130
  store double %final_payload, ptr %elem_ptr, align 8
  %loop_cont = icmp ult i64 %list_idx, %list_len
  br i1 %loop_cont, label %arr_loop_body, label %arr_loop_end, !llvm.loop !3

arr_loop_end:                                     ; preds = %arr_loop_body, %middle.block, %entry
  %arr_ptr_to_int = ptrtoint ptr %malloc_arr to i64
  %arr_ptr_payload = and i64 %arr_ptr_to_int, 281474976710655
  %malloc_list5 = tail call dereferenceable_or_null(40) ptr @malloc(i64 40)
  store i64 4, ptr %malloc_list5, align 4
  %elem_ptr_07 = getelementptr inbounds i64, ptr %malloc_list5, i64 1
  store i64 4621819117588971520, ptr %elem_ptr_07, align 4
  %elem_ptr_18 = getelementptr inbounds i64, ptr %malloc_list5, i64 2
  store i64 4626322717216342016, ptr %elem_ptr_18, align 4
  %elem_ptr_29 = getelementptr inbounds i64, ptr %malloc_list5, i64 3
  store i64 4629137466983448576, ptr %elem_ptr_29, align 4
  %elem_ptr_310 = getelementptr inbounds i64, ptr %malloc_list5, i64 4
  store i64 4630826316843712512, ptr %elem_ptr_310, align 4
  %ptr_to_int11 = ptrtoint ptr %malloc_list5 to i64
  %list_ptr_payload12 = and i64 %ptr_to_int11, 281474976710655
  %payload_to_list_ptr15 = inttoptr i64 %list_ptr_payload12 to ptr
  %list_len17 = load i64, ptr %payload_to_list_ptr15, align 4
  %arr_words18 = shl i64 %list_len17, 3
  %arr_bytes19 = add i64 %arr_words18, 24
  %malloc_arr20 = tail call ptr @malloc(i64 %arr_bytes19)
  %malloc_arr20137 = ptrtoint ptr %malloc_arr20 to i64
  store i64 0, ptr %malloc_arr20, align 4
  %hdr_ptr22 = getelementptr inbounds i64, ptr %malloc_arr20, i64 1
  store i64 1, ptr %hdr_ptr22, align 4
  %hdr_ptr23 = getelementptr inbounds i64, ptr %malloc_arr20, i64 2
  store i64 %list_len17, ptr %hdr_ptr23, align 4
  %data_ptr24 = getelementptr inbounds i64, ptr %malloc_arr20, i64 3
  %loop_cont30131.not = icmp eq i64 %list_len17, 0
  br i1 %loop_cont30131.not, label %arr_loop_end28, label %arr_loop_body27.preheader

arr_loop_body27.preheader:                        ; preds = %arr_loop_end
  %min.iters.check141 = icmp ult i64 %list_len17, 6
  br i1 %min.iters.check141, label %arr_loop_body27.preheader171, label %vector.memcheck136

vector.memcheck136:                               ; preds = %arr_loop_body27.preheader
  %15 = add i64 %malloc_arr20137, 16
  %16 = sub i64 %15, %list_ptr_payload12
  %diff.check138 = icmp ult i64 %16, 16
  br i1 %diff.check138, label %arr_loop_body27.preheader171, label %vector.ph142

vector.ph142:                                     ; preds = %vector.memcheck136
  %n.vec144 = and i64 %list_len17, -2
  br label %vector.body147

vector.body147:                                   ; preds = %vector.body147, %vector.ph142
  %index148 = phi i64 [ 0, %vector.ph142 ], [ %index.next150, %vector.body147 ]
  %17 = or disjoint i64 %index148, 1
  %18 = getelementptr inbounds i64, ptr %payload_to_list_ptr15, i64 %17
  %wide.load149 = load <2 x i64>, ptr %18, align 4
  %19 = and <2 x i64> %wide.load149, <i64 9221120237041090560, i64 9221120237041090560>
  %20 = icmp eq <2 x i64> %19, <i64 9221120237041090560, i64 9221120237041090560>
  %21 = bitcast <2 x i64> %wide.load149 to <2 x double>
  %22 = and <2 x i64> %wide.load149, <i64 281474976710655, i64 281474976710655>
  %23 = icmp ult <2 x i64> %22, <i64 140737488355328, i64 140737488355328>
  %24 = select <2 x i1> %23, <2 x i64> zeroinitializer, <2 x i64> <i64 -281474976710656, i64 -281474976710656>
  %25 = or disjoint <2 x i64> %24, %22
  %26 = sitofp <2 x i64> %25 to <2 x double>
  %27 = select <2 x i1> %20, <2 x double> %26, <2 x double> %21
  %28 = getelementptr inbounds double, ptr %data_ptr24, i64 %index148
  store <2 x double> %27, ptr %28, align 8
  %index.next150 = add nuw i64 %index148, 2
  %29 = icmp eq i64 %index.next150, %n.vec144
  br i1 %29, label %middle.block139, label %vector.body147, !llvm.loop !4

middle.block139:                                  ; preds = %vector.body147
  %cmp.n146 = icmp eq i64 %list_len17, %n.vec144
  br i1 %cmp.n146, label %arr_loop_end28, label %arr_loop_body27.preheader171

arr_loop_body27.preheader171:                     ; preds = %vector.memcheck136, %arr_loop_body27.preheader, %middle.block139
  %storemerge132.ph = phi i64 [ 0, %vector.memcheck136 ], [ 0, %arr_loop_body27.preheader ], [ %n.vec144, %middle.block139 ]
  br label %arr_loop_body27

arr_loop_body27:                                  ; preds = %arr_loop_body27.preheader171, %arr_loop_body27
  %storemerge132 = phi i64 [ %list_idx32, %arr_loop_body27 ], [ %storemerge132.ph, %arr_loop_body27.preheader171 ]
  %list_idx32 = add nuw i64 %storemerge132, 1
  %list_elem_ptr33 = getelementptr inbounds i64, ptr %payload_to_list_ptr15, i64 %list_idx32
  %boxed_elem34 = load i64, ptr %list_elem_ptr33, align 4
  %check_qnan35 = and i64 %boxed_elem34, 9221120237041090560
  %is_float36.not = icmp eq i64 %check_qnan35, 9221120237041090560
  %i64_to_f6437 = bitcast i64 %boxed_elem34 to double
  %extract_payload38 = and i64 %boxed_elem34, 281474976710655
  %is_negative40.not = icmp ult i64 %extract_payload38, 140737488355328
  %masksel127 = select i1 %is_negative40.not, i64 0, i64 -281474976710656
  %signed_payload42 = or disjoint i64 %masksel127, %extract_payload38
  %payload_to_f6443 = sitofp i64 %signed_payload42 to double
  %final_payload44 = select i1 %is_float36.not, double %payload_to_f6443, double %i64_to_f6437
  %elem_ptr45 = getelementptr inbounds double, ptr %data_ptr24, i64 %storemerge132
  store double %final_payload44, ptr %elem_ptr45, align 8
  %loop_cont30 = icmp ult i64 %list_idx32, %list_len17
  br i1 %loop_cont30, label %arr_loop_body27, label %arr_loop_end28, !llvm.loop !5

arr_loop_end28:                                   ; preds = %arr_loop_body27, %middle.block139, %arr_loop_end
  %arr_ptr_to_int47 = ptrtoint ptr %malloc_arr20 to i64
  %arr_ptr_payload48 = and i64 %arr_ptr_to_int47, 281474976710655
  %payload_to_arr_ptr = inttoptr i64 %arr_ptr_payload to ptr
  %payload_to_arr_ptr53 = inttoptr i64 %arr_ptr_payload48 to ptr
  %size_ptr = getelementptr inbounds i64, ptr %payload_to_arr_ptr, i64 2
  %arr_size = load i64, ptr %size_ptr, align 4
  %data_ptr54 = getelementptr inbounds i64, ptr %payload_to_arr_ptr, i64 3
  %data_ptr68 = getelementptr inbounds i64, ptr %payload_to_arr_ptr53, i64 3
  %arr_words84 = shl i64 %arr_size, 3
  %arr_bytes85 = add i64 %arr_words84, 24
  %malloc_arr86 = tail call ptr @malloc(i64 %arr_bytes85)
  %malloc_arr86152 = ptrtoint ptr %malloc_arr86 to i64
  store i64 0, ptr %malloc_arr86, align 4
  %hdr_ptr88 = getelementptr inbounds i64, ptr %malloc_arr86, i64 1
  store i64 1, ptr %hdr_ptr88, align 4
  %hdr_ptr89 = getelementptr inbounds i64, ptr %malloc_arr86, i64 2
  store i64 %arr_size, ptr %hdr_ptr89, align 4
  %data_ptr90 = getelementptr inbounds i64, ptr %malloc_arr86, i64 3
  %loop_cont96133.not = icmp eq i64 %arr_size, 0
  br i1 %loop_cont96133.not, label %arr_loop_end94, label %arr_loop_body93.preheader

arr_loop_body93.preheader:                        ; preds = %arr_loop_end28
  %min.iters.check157 = icmp ult i64 %arr_size, 8
  br i1 %min.iters.check157, label %arr_loop_body93.preheader170, label %vector.memcheck151

vector.memcheck151:                               ; preds = %arr_loop_body93.preheader
  %30 = sub i64 %malloc_arr86152, %arr_ptr_payload
  %diff.check153 = icmp ult i64 %30, 32
  %31 = sub i64 %malloc_arr86152, %arr_ptr_payload48
  %diff.check154 = icmp ult i64 %31, 32
  %conflict.rdx = or i1 %diff.check153, %diff.check154
  br i1 %conflict.rdx, label %arr_loop_body93.preheader170, label %vector.ph158

vector.ph158:                                     ; preds = %vector.memcheck151
  %n.vec160 = and i64 %arr_size, -4
  br label %vector.body163

vector.body163:                                   ; preds = %vector.body163, %vector.ph158
  %index164 = phi i64 [ 0, %vector.ph158 ], [ %index.next169, %vector.body163 ]
  %32 = getelementptr inbounds double, ptr %data_ptr54, i64 %index164
  %33 = getelementptr inbounds double, ptr %32, i64 2
  %wide.load165 = load <2 x double>, ptr %32, align 8
  %wide.load166 = load <2 x double>, ptr %33, align 8
  %34 = getelementptr inbounds double, ptr %data_ptr68, i64 %index164
  %35 = getelementptr inbounds double, ptr %34, i64 2
  %wide.load167 = load <2 x double>, ptr %34, align 8
  %wide.load168 = load <2 x double>, ptr %35, align 8
  %36 = fadd <2 x double> %wide.load165, %wide.load167
  %37 = fadd <2 x double> %wide.load166, %wide.load168
  %38 = getelementptr inbounds double, ptr %data_ptr90, i64 %index164
  %39 = getelementptr inbounds double, ptr %38, i64 2
  store <2 x double> %36, ptr %38, align 8
  store <2 x double> %37, ptr %39, align 8
  %index.next169 = add nuw i64 %index164, 4
  %40 = icmp eq i64 %index.next169, %n.vec160
  br i1 %40, label %middle.block155, label %vector.body163, !llvm.loop !6

middle.block155:                                  ; preds = %vector.body163
  %cmp.n162 = icmp eq i64 %arr_size, %n.vec160
  br i1 %cmp.n162, label %arr_loop_end94, label %arr_loop_body93.preheader170

arr_loop_body93.preheader170:                     ; preds = %vector.memcheck151, %arr_loop_body93.preheader, %middle.block155
  %storemerge126134.ph = phi i64 [ 0, %vector.memcheck151 ], [ 0, %arr_loop_body93.preheader ], [ %n.vec160, %middle.block155 ]
  br label %arr_loop_body93

arr_loop_body93:                                  ; preds = %arr_loop_body93.preheader170, %arr_loop_body93
  %storemerge126134 = phi i64 [ %i_next102, %arr_loop_body93 ], [ %storemerge126134.ph, %arr_loop_body93.preheader170 ]
  %elem_ptr98 = getelementptr inbounds double, ptr %data_ptr54, i64 %storemerge126134
  %elem = load double, ptr %elem_ptr98, align 8
  %elem_ptr99 = getelementptr inbounds double, ptr %data_ptr68, i64 %storemerge126134
  %elem100 = load double, ptr %elem_ptr99, align 8
  %arr_add = fadd double %elem, %elem100
  %elem_ptr101 = getelementptr inbounds double, ptr %data_ptr90, i64 %storemerge126134
  store double %arr_add, ptr %elem_ptr101, align 8
  %i_next102 = add nuw i64 %storemerge126134, 1
  %loop_cont96 = icmp ult i64 %i_next102, %arr_size
  br i1 %loop_cont96, label %arr_loop_body93, label %arr_loop_end94, !llvm.loop !7

arr_loop_end94:                                   ; preds = %arr_loop_body93, %middle.block155, %arr_loop_end28
  %arr_ptr_to_int103 = ptrtoint ptr %malloc_arr86 to i64
  %arr_ptr_payload104 = and i64 %arr_ptr_to_int103, 281474976710655
  %payload_to_arr_ptr108 = inttoptr i64 %arr_ptr_payload104 to ptr
  %data_ptr109 = getelementptr inbounds i64, ptr %payload_to_arr_ptr108, i64 3
  %elem111 = load double, ptr %data_ptr109, align 8
  %float_as_i64 = bitcast double %elem111 to i64
  %check_qnan112 = and i64 %float_as_i64, 9221120237041090560
  %is_float113.not = icmp eq i64 %check_qnan112, 9221120237041090560
  %tag_bits = lshr i64 %float_as_i64, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %41 = trunc i64 %tag_bits to i3
  %42 = select i1 %is_bool, i3 2, i3 %41
  %43 = select i1 %is_string, i3 3, i3 %42
  %44 = select i1 %is_list, i3 -4, i3 %43
  %extract_payload117 = and i64 %float_as_i64, 281474976710655
  %is_negative119.not = icmp ult i64 %extract_payload117, 140737488355328
  %masksel = select i1 %is_negative119.not, i64 0, i64 -281474976710656
  %signed_payload121 = or disjoint i64 %masksel, %extract_payload117
  %payload_to_f64122 = sitofp i64 %signed_payload121 to double
  %final_payload123 = select i1 %is_float113.not, double %payload_to_f64122, double %elem111
  %trunc = select i1 %is_float113.not, i3 %44, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

print_int:                                        ; preds = %arr_loop_end94
  %to_int = fptosi double %final_payload123 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %arr_loop_end94
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %final_payload123)
  br label %print_end

print_string:                                     ; preds = %arr_loop_end94
  %payload_to_ptr = inttoptr i64 %extract_payload117 to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }

!0 = distinct !{!0, !1, !2}
!1 = !{!"llvm.loop.isvectorized", i32 1}
!2 = !{!"llvm.loop.unroll.runtime.disable"}
!3 = distinct !{!3, !1}
!4 = distinct !{!4, !1, !2}
!5 = distinct !{!5, !1}
!6 = distinct !{!6, !1, !2}
!7 = distinct !{!7, !1}
